<resources>
    <string name="app_name" translatable="false">MeetYourMatch</string>
    <string name="app_title" translatable="false">MeetYourMatch</string>
    <string name="congratulation">"Поздравляем!\nВы зарегистрированы!"</string>
    <string name="start">Начать поиски</string>
    <string name="chat">Чаты</string>
    <string name="search">Поиск</string>
    <string name="event">События</string>
    <string name="map">Карта</string>
    <string name="email">"loremipsum@fish.lang"</string>
    <string name="buttonLogin">Войти</string>
    <string name="buttonForgotPassword">Забыли пароль?</string>
    <string name="buttonToSignin">Зарегистрироваться</string>
    <string name="preToSignin">Нет аккаунта?</string>
    <string name="welcome">Приветствуем вас!</string>
    <string name="vkidSignin">Войти при помощи VK ID</string>
    <string name="hintUsername">Имя пользователя</string>
    <string name="hintPassword">Пароль</string>
    <string name="successfulLogin">Успешный вход</string>
    <string name="successfulInterest">Успешно получены все интересы</string>
    <string name="invalidLogin">Неверный логин или пароль</string>
    <string name="invalidInterest">Не получены интересы</string>
    <string name="connectionError">Ошибка соединения: </string>
    <string name="policy">Я прочитал и согласен с Условиями пользования и Политикой приватности</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_events_at_location">no_events_at_location</string>
    <string name="unknown_location">unknown_location</string>
    <string name="location_data_missing">location_data_missing</string>
    <string name="content_desc_event_image_large">Картинка </string>
    <string name="content_desc_like">Добавить в понравившееся</string>
    <string name="content_desc_add_calendar">Добавить в календарь</string>
    <string name="action_share">Поделиться</string>
    <string name="comments_title">Комментарии</string>
    <string name="no_comments_yet">Комментариев ещё нет.</string>
    <string name="page_info_format">Страница %1$d из %2$d</string>
    <string name="content_desc_profile_avatar">Аватар пользователя</string>
    <string name="description_label">Описание</string>
    <string name="button_start_chat">Написать сообщение</string>
    <string name="button_add_friend">Добавить в друзья</string>
    <string name="button_remove_friend">Удалить из друзей</string>
    <string name="button_cancel_request">Отменить запрос в друзья</string>
    <string name="button_accept_friend">Принять запрос в друзья</string>
    <string name="button_reject_friend">Отклонить запрос в друзья</string>
    <string name="button_block_user">Заблокировать</string>
    <string name="button_unblock_user">Разблокировать</string>
    <string name="confirm_add_friend_title">Добавить в друзья?</string>
    <string name="confirm_add_friend_message">Отправить запрос пользователю %1$s?</string>
    <string name="confirm_remove_friend_title">Удалить из друзей?</string>
    <string name="confirm_remove_friend_message">Вы уверены, что хотите удалить %1$s из друзей?</string>
    <string name="confirm_cancel_request_title">Отменить запрос?</string>
    <string name="confirm_cancel_request_message">Отменить ваш запрос в друзья к %1$s?</string>
    <string name="confirm_accept_request_title">Принять запрос?</string>
    <string name="confirm_accept_request_message">Добавить %1$s в друзья?</string>
    <string name="confirm_reject_request_title">Отклонить запрос?</string>
    <string name="confirm_reject_request_message">Отклонить запрос в друзья от %1$s?</string>
    <string name="confirm_block_user_title">Заблокировать?</string>
    <string name="confirm_block_user_message">Заблокировать %1$s? Вы не сможете общаться и видеть друг друга.</string>
    <string name="confirm_unblock_user_title">Разблокировать?</string>
    <string name="confirm_unblock_user_message">Разблокировать %1$s?</string>
    <string name="toast_request_sent">Запрос отправлен</string>
    <string name="toast_friend_removed">Удален из друзей</string>
    <string name="toast_request_cancelled">Запрос отменен</string>
    <string name="toast_friend_added">Пользователь добавлен в друзья</string>
    <string name="toast_request_rejected">Запрос отклонен</string>
    <string name="toast_user_blocked">Пользователь заблокирован</string>
    <string name="toast_user_unblocked">Пользователь разблокирован</string>
    <string name="error_loading_profile">Не удалось загрузить профиль</string>
    <string name="error_loading_relations">Не удалось загрузить статус отношений</string>
    <string name="error_network">Ошибка сети</string>
    <string name="error_generic">Произошла ошибка</string>
    <string name="error_cannot_determine_user">Ошибка: Не удалось определить текущего пользователя</string>
    <string name="error_no_user_specified">Ошибка: Не указан пользователь</string>
    <string name="error_critical_no_user_id">Критическая ошибка: Не найден идентификатор пользователя</string>
    <string name="error_cannot_chat_blocked">Вы не можете начать чат с заблокированным пользователем.</string>
    <string name="error_user_data_not_loaded">Данные пользователя не загружены</string>
    <string name="fab_new_chat_content_desc">Начать новый чат</string>
    <string name="error_loading_chat_list">Не удалось загрузить список чатов</string>
    <string name="no_chats_found">Нет активных чатов</string>
    <string name="error_selecting_chat">Ошибка выбора чата</string>
    <string name="bottom_sheet_search_title">Найти пользователя</string>
    <string name="search_user_hint">Поиск пользователя по имени...</string>
    <string name="users_not_found">Пользователи не найдены</string>
    <string name="error_loading_users">Не удалось загрузить пользователей</string>
    <string name="error_network_loading_users">Ошибка сети при загрузке пользователей</string>
    <string name="please_wait_loading">Пожалуйста, подождите…</string>
    <string name="error_loading_relations_try_again">Не удалось загрузить статус отношений. Попробуйте еще раз.</string>
    <string name="error_unknown_user">Неизвестный пользователь</string>
    <string name="button_accept_request">Принять</string>
    <string name="button_reject_request">Отклонить</string>
    <string name="placeholder_last_message">...</string>
    <string name="no_chats_match_search">Пользователи не найдены</string>
    <string name="error_missing_user_id">Нет user_id</string>
    <string name="error_missing_username">Нет username</string>
    <string name="search_chats_hint">Поиск по имени пользователя...</string>
    <string name="desc_clear_search">Очистить строку поиска</string>
    <string name="desc_new_chat">Найти нового пользователя</string>
    <string name="chat_interaction_blocked">Вы не можете написать этому пользователю</string>
    <string name="hint_enter_message">Введите сообщение...</string>
    <string name="desc_send_message">Отправить сообщение</string>
    <string name="date_header_yesterday">Вчера</string>
    <string name="date_header_today">Сегодня</string>
    <string name="error_loading_chat_info">Ошибка при загрузке информации о чате</string>
    <string name="error_not_connected_cant_send">Нет соединания, невозможно отпарвить сообщение</string>
    <string name="error_cant_send_blocked">Установлена блокировка, невозможно отпарвить сообщение</string>
    <string name="error_network_history">Ошибка сети, невозможно получить историю сообщений</string>
    <string name="error_loading_history">Ошибка загрузки истории сообщений</string>
    <string name="status_loading_history">Загрузка истории сообщений</string>
    <string name="status_connecting">Установка соединения</string>
    <string name="status_disconnected">Соединение разоравно</string>
    <string name="status_connection_error">Ошибка соединения</string>
    <string name="status_initializing">Инициализация</string>
    <string name="title_create_event">Создать событие</string>
    <string name="label_event_cover">Обложка события</string>
    <string name="desc_event_cover_preview">Превью обложки</string>
    <string name="button_select_image">Выберите изображение</string>
    <string name="label_event_title">Заголовок события</string>
    <string name="hint_event_title">Введите заголовок события...</string>
    <string name="label_event_description">Описание события</string>
    <string name="hint_event_description">Введите описание события...</string>
    <string name="label_event_date">Дата события</string>
    <string name="hint_event_date_format">ДД:ММ:ГГ</string>
    <string name="label_event_price">Цена входа на события</string>
    <string name="hint_event_price">Введите цену...</string>
    <string name="hint_event_source_url">Введите ссылку для связи...</string>
    <string name="label_event_source_url">Ссылка для связи</string>
    <string name="label_event_tags">Теги события</string>
    <string name="error_tag_limit_reached">Достигнут лимит тегов</string>
    <string name="label_event_location">Расположение события</string>
    <string name="hint_event_location">Выберите расположение события...</string>
    <string name="button_create_event">Создать событие!</string>
    <string name="error_permission_denied_storage">Нет разрешения для доступа к внутреннему хранилищу</string>
    <string name="error_cropping_image">Ошибка при обрезке изображения</string>
    <string name="error_loading_tags">Ошибка при загрузке тегов</string>
    <string name="error_network_tags">Ошибка сети при загрузке тегов</string>
    <string name="error_loading_locations">Ошибка при загрузке локаций</string>
    <string name="error_network_locations">Ошибка сети при загрузке локаций</string>
    <string name="error_select_image">Выберите изображение!</string>
    <string name="error_field_required">Введите текст!</string>
    <string name="error_invalid_date_format">Введите корректную дату!</string>
    <string name="error_price_range">Введите цену от 0 до 99999!</string>
    <string name="error_invalid_number">Введите число!</string>
    <string name="error_invalid_url">Введите корректный url!</string>
    <string name="error_select_location">Выберите локацию!</string>
    <string name="error_processing_image">Ошибка при обработке изображения</string>
    <string name="error_uploading_image">Ошибка при загрузке изображения</string>
    <string name="error_network_upload">Ошибка сети при загрузке изображения</string>
    <string name="event_created_successfully">Событие создано успешно!</string>
    <string name="error_creating_event">Ошибка при создании события</string>
    <string name="error_network_creating_event">Ошибка сети при создании события</string>
    <string name="hint_select_event_date">Выберите дату...</string>
    <string name="error_select_date">Ошибка при выборе даты</string>
    <string name="error_date_too_early">Выбрана слишком ранняя дата!</string>
    <string name="error_loading_preview">Ошибка при загрузке превью</string>
    <string name="label_event_date_time">Дата и время события</string>
    <string name="hint_select_event_date_time">Выберите дату и время...</string>
    <string name="error_select_date_time">Ошибка выбора даты и времени</string>
    <string name="error_date_time_too_early">Дата и время слишком ранние!</string>
    <string name="back_button_desc">Назад</string>
    <string name="title_create_group_chat">Создать групповой чат</string>
    <string name="group_avatar_desc">Аватар группы</string>
    <string name="hint_group_name">Название группы</string>
    <string name="hint_enter_group_name">Введите название группы</string>
    <string name="button_add_participants">Добавить участников</string>
    <string name="label_selected_participants">Выбранные участники:</string>
    <string name="button_create_group">Создать группу</string>
    <string name="desc_remove_participant">Удалить участника</string>
</resources>