<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        style="@style/Header"
        android:id="@+id/topBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            style="@style/HeaderButton"
            android:drawableTop="@drawable/bell"/>


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginHorizontal="50dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"/>


        <Button
            style="@style/HeaderButton"
            android:drawableTop="@drawable/avatar"/>
    </LinearLayout>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/map_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:paddingTop="5dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/bars">

        <Button
            style="@style/NavigationButtons"
            android:drawableTop="@drawable/chat"
            android:text="@string/chat"/>

        <Button
            style="@style/NavigationButtons"
            android:drawableTop="@drawable/search"
            android:text="@string/search"/>

        <Button
            style="@style/NavigationButtons"
            android:drawableTop="@drawable/range"
            android:text="@string/event"/>

        <Button
            style="@style/NavigationButtons"
            android:drawableTop="@drawable/chosen_location_pin"
            android:text="@string/map"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>