<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".activity.CreateGroupActivity">

    <LinearLayout
        android:id="@+id/toolbar_create_group"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bars"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="4dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/create_group_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_desc"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:tint="@color/icons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/title_create_group_chat"
            android:textColor="@color/textColorPrimaryModern"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/group_avatar_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_border_background"
                android:contentDescription="@string/desc_event_cover_preview"
                android:padding="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_insert_photo_24"
                app:tint="@color/textColorTertiaryModern" />

            <!-- TODO: Добавить кнопку для выбора аватара -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/hint_group_name"
                android:textColor="@color/textColorSecondaryModern"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_text_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_border_background"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_enter_group_name"
                android:inputType="textCapWords"
                android:padding="12dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/textColorPrimaryModern"
                android:textColorHint="@color/textColorTertiaryModern" />

            <!-- Добавление участников -->
            <Button
                android:id="@+id/button_add_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/sansation_bold"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:shadowColor="@color/bars"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:text="@string/button_add_participants"
                android:textColor="@color/button_ripple_mask"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/text_view_selected_participants_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_selected_participants"
                android:textColor="@color/textColorSecondaryModern"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_selected_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                tools:listitem="@layout/item_selected_participant"
                tools:itemCount="2"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:enabled="false"
        android:fontFamily="@font/sansation_bold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:shadowColor="@color/bars"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/button_create_group"
        android:textColor="@color/button_ripple_mask"
        android:textSize="16dp" />

    <ProgressBar
        android:id="@+id/progress_bar_create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="16dp"/>

</LinearLayout>